--- a/src/view/adminhtml/layout/sales_order_view.xml
+++ b/src/view/adminhtml/layout/sales_order_view.xml
@@ -1,4 +1,8 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <script src="Gubee_Integration::js/dist/main.js"/>
+        <css src="Gubee_Integration::js/dist/main.css"/>
+    </head>
     <body>
         <referenceBlock name="sales_order_tabs">
             <action method="addTab">
