--- a/src/view/adminhtml/web/js/assets/css/style.css
+++ b/src/view/adminhtml/web/js/assets/css/style.css
@@ -14,6 +14,12 @@ i.gubee-black::before,
     @apply bg-no-repeat bg-center bg-contain top-0 left-0 z-0 content-[''] inline-block pr-10 relative align-middle mr-2;
 }
 
+.gubeeIcon {
+    width: 30px;
+    height: 30px;
+    @apply bg-no-repeat bg-center bg-contain top-0 left-0 z-0 content-[''] inline-block pr-10 relative align-middle mr-2;
+}
+
 li[data-ui-id="menu-gubee-integration-catalog"] .submenu-group-title span::before,
 #gubee_sync span::before {
     background-image: url('./../img/logo-white.svg');
